--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "morph": "nodemon --exec babel-node app-server.js --out-file server.js",
+    "morph": "babel-node app-server.js --out-file server.js",
     "start": "webpack-dev-server --hot --inline --content-base ./dist",
-    "dist": "nodemon server.js"
+    "dist": "nodemon app-server.js"
   },
   "keywords": [
     "shopify",
@@ -23,6 +23,7 @@
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
+    "firebase": "^4.2.0",
     "logger": "0.0.1",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
@@ -32,6 +33,7 @@
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "reactfire": "^1.0.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
