--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "author": "Nicholas Kaufmann",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
+    "cosmicjs": "^2.39.91",
     "express": "^4.15.3",
     "firebase": "^4.2.0",
     "logger": "0.0.1",
@@ -33,7 +35,9 @@
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "react-transition-group": "^2.2.0",
     "reactfire": "^1.0.0",
+    "rebase": "^0.3.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
@@ -44,7 +48,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "compression-webpack-plugin": "^1.0.0",
-    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
